Support audit TEST03 (waiting for more tests).

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1974,20 +1974,16 @@
     "        if not os.path.exists(mode_dir): os.mkdir(mode_dir)\n",
     "        \n",
     "        if audit:\n",
-    "            # Save accuracy and performance dirs for the corresponding experiments.\n",
+    "            # Only deal with a subset of audit tests for now.\n",
+    "            if test not in [ 'TEST01' ]: #, 'TEST03' ]:\n",
+    "                continue\n",
+    "            \n",
+    "            # Save the accuracy and performance dirs for the corresponding submission experiment.\n",
     "            accuracy_dir = os.path.join(scenario_dir, 'accuracy')\n",
     "            performance_dir = os.path.join(scenario_dir, 'performance', 'run_1')\n",
-    "            \n",
-    "            # Only deal with audit test 01 for now.\n",
-    "            if 'TEST01' not in tags:\n",
-    "                continue\n",
-    "\n",
-    "            if 'TEST03' in tags:\n",
-    "                mode = 'accuracy'\n",
-    "            else:\n",
-    "                mode = 'performance'\n",
-    "                \n",
-    "            # Create a similar directory structure to results_dir, with just one more level, test_dir,\n",
+    "            # Use the mode expected for each test.\n",
+    "            mode = 'performance' if test!='TEST03' else 'submission'\n",
+    "            # Create a similar directory structure to results_dir, with another level, test_dir,\n",
     "            # between scenario_dir and mode_dir.\n",
     "            audit_dir = os.path.join(organization_dir, 'audit')\n",
     "            if not os.path.exists(audit_dir): os.mkdir(audit_dir)\n",
@@ -2046,8 +2042,8 @@
     "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file, indent=2)\n",
     "                print('  |_ %s' % accuracy_json_name)\n",
     "            # Do what's required by NVIDIA's audit tests.\n",
+    "            test_path = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', test)\n",
     "            if audit and 'TEST01' in tags:\n",
-    "                test_path = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', test)\n",
     "                # Verify that the accuracy (partially) dumped for the audit test matches that for the submision.\n",
     "                verify_accuracy_py = os.path.join(test_path, 'verify_accuracy.py')\n",
     "                submission_accuracy_json_path = os.path.join(accuracy_dir, accuracy_json_name)\n",
@@ -2056,26 +2052,26 @@
     "                verify_accuracy_txt_path = os.path.join(test_dir, verify_accuracy_txt_name)\n",
     "                with open(verify_accuracy_txt_path, 'w') as verify_accuracy_txt_file:\n",
     "                    verify_accuracy_txt_file.writelines('\\n'.join(verify_accuracy_txt))\n",
+    "            if audit and ('TEST01' in tags or 'TEST03' in tags):\n",
     "                # Verify that the performance for the audit test matches that for the submission.\n",
     "                verify_performance_py = os.path.join(test_path, 'verify_performance.py')\n",
     "                submission_summary_txt_path = os.path.join(performance_dir, summary_txt_name)\n",
+    "                print(\"python3 {} -r {} -t {}\".format(verify_performance_py, submission_summary_txt_path, summary_txt_path))\n",
     "                verify_performance_txt = !python3 $verify_performance_py -r $submission_summary_txt_path -t $summary_txt_path\n",
     "                verify_performance_txt_name = 'verify_performance.txt'\n",
     "                verify_performance_txt_path = os.path.join(test_dir, verify_performance_txt_name)\n",
     "                with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
     "                    verify_performance_txt_file.writelines('\\n'.join(verify_performance_txt))\n",
-    "                # Skip the rest of the loop.\n",
-    "                continue\n",
-    "            # Generate accuracy.txt and submission_checklist.txt.\n",
-    "            if mode == 'accuracy':\n",
+    "            # Generate accuracy.txt.\n",
+    "            if mode=='accuracy' or mode=='submission':\n",
     "                accuracy_txt_name = 'accuracy.txt'\n",
     "                accuracy_txt_path = os.path.join(last_dir, accuracy_txt_name)\n",
     "                if task=='image-classification':\n",
     "                    accuracy_imagenet_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-imagenet.py')\n",
     "                    imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt' # FIXME: Do not hardcode - locate via CK.\n",
     "                    accuracy_txt = !python3 $accuracy_imagenet_py --imagenet-val-file $imagenet_val_file --mlperf-accuracy-file $accuracy_json_path\n",
-    "                    # The only line is e.g. \"...\"\n",
-    "                    accuracy_line = accuracy_txt[0]\n",
+    "                    # The last (and only line) is e.g. \"accuracy=76.442%, good=38221, total=50000\".\n",
+    "                    accuracy_line = accuracy_txt[-1]\n",
     "                    match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
     "                    accuracy_pc = float(match.group(1))\n",
     "                elif task=='object-detection':\n",
@@ -2092,9 +2088,8 @@
     "                with open(accuracy_txt_path, 'w') as accuracy_txt_file:\n",
     "                    accuracy_txt_file.writelines('\\n'.join(accuracy_txt))\n",
     "                    print('  |_ %s [%.3f%% parsed from \"%s\"]' % (accuracy_txt_name, accuracy_pc, accuracy_line))\n",
-    "                #\n",
-    "                # Write checklist for each system, benchmark and scenario under \"measurements/\".\n",
-    "                #\n",
+    "            # Generate submission_checklist.txt for each system, benchmark and scenario under \"measurements/\".\n",
+    "            if mode=='accuracy' and not audit:\n",
     "                checklist_name = 'submission_checklist.txt'\n",
     "                checklist_path = os.path.join(measurements_dir, system, benchmark, scenario, checklist_name)\n",
     "                system_json = division_systems.get(division_system, default_system_json)\n",
@@ -2134,7 +2129,8 @@
     "#repos = repos_merged\n",
     "repos = [\n",
     "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "    'mlperf.closed.image-classification.rpi4.audit'\n",
+    "#    'mlperf.closed.image-classification.rpi4.audit'\n",
+    "    'mlperf.closed.image-classification.firefly.audit'\n",
     "]\n",
     "# repos = repos_object_detection_open\n",
     "for repo_uoa in repos:\n",
