Support audit TEST05.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1975,7 +1975,7 @@
     "        \n",
     "        if audit:\n",
     "            # Only deal with a subset of audit tests for now.\n",
-    "            if test not in [ 'TEST01' ]: #, 'TEST03' ]:\n",
+    "            if test not in [ 'TEST05' ]: # [ 'TEST01', 'TEST03' ]:\n",
     "                continue\n",
     "            \n",
     "            # Save the accuracy and performance dirs for the corresponding submission experiment.\n",
@@ -2052,7 +2052,7 @@
     "                verify_accuracy_txt_path = os.path.join(test_dir, verify_accuracy_txt_name)\n",
     "                with open(verify_accuracy_txt_path, 'w') as verify_accuracy_txt_file:\n",
     "                    verify_accuracy_txt_file.writelines('\\n'.join(verify_accuracy_txt))\n",
-    "            if audit and ('TEST01' in tags or 'TEST03' in tags):\n",
+    "            if audit and test in [ 'TEST01', 'TEST03', 'TEST05' ]:\n",
     "                # Verify that the performance for the audit test matches that for the submission.\n",
     "                verify_performance_py = os.path.join(test_path, 'verify_performance.py')\n",
     "                submission_summary_txt_path = os.path.join(performance_dir, summary_txt_name)\n",
