Support audit TEST04-A/B.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1975,14 +1975,14 @@
     "        \n",
     "        if audit:\n",
     "            # Only deal with a subset of audit tests for now.\n",
-    "            if test not in [ 'TEST05' ]: # [ 'TEST01', 'TEST03' ]:\n",
+    "            if test not in [ 'TEST04-A', 'TEST04-B' ]: # [ 'TEST01', 'TEST03', 'TEST05' ]:\n",
     "                continue\n",
     "            \n",
     "            # Save the accuracy and performance dirs for the corresponding submission experiment.\n",
     "            accuracy_dir = os.path.join(scenario_dir, 'accuracy')\n",
     "            performance_dir = os.path.join(scenario_dir, 'performance', 'run_1')\n",
     "            # Use the mode expected for each test.\n",
-    "            mode = 'performance' if test!='TEST03' else 'submission'\n",
+    "            mode = 'performance' if test != 'TEST03' else 'submission'\n",
     "            # Create a similar directory structure to results_dir, with another level, test_dir,\n",
     "            # between scenario_dir and mode_dir.\n",
     "            audit_dir = os.path.join(organization_dir, 'audit')\n",
@@ -2052,21 +2052,43 @@
     "                verify_accuracy_txt_path = os.path.join(test_dir, verify_accuracy_txt_name)\n",
     "                with open(verify_accuracy_txt_path, 'w') as verify_accuracy_txt_file:\n",
     "                    verify_accuracy_txt_file.writelines('\\n'.join(verify_accuracy_txt))\n",
+    "                    print('%s' % test_dir)\n",
+    "                    print('  |_ %s' % verify_accuracy_txt_name)\n",
     "            if audit and test in [ 'TEST01', 'TEST03', 'TEST05' ]:\n",
     "                # Verify that the performance for the audit test matches that for the submission.\n",
     "                verify_performance_py = os.path.join(test_path, 'verify_performance.py')\n",
     "                submission_summary_txt_path = os.path.join(performance_dir, summary_txt_name)\n",
-    "                print(\"python3 {} -r {} -t {}\".format(verify_performance_py, submission_summary_txt_path, summary_txt_path))\n",
     "                verify_performance_txt = !python3 $verify_performance_py -r $submission_summary_txt_path -t $summary_txt_path\n",
     "                verify_performance_txt_name = 'verify_performance.txt'\n",
     "                verify_performance_txt_path = os.path.join(test_dir, verify_performance_txt_name)\n",
     "                with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
     "                    verify_performance_txt_file.writelines('\\n'.join(verify_performance_txt))\n",
+    "                    print('%s' % test_dir)\n",
+    "                    print('  |_ %s' % verify_performance_txt_name)\n",
+    "            if audit and test in [ 'TEST04-A', 'TEST04-B' ]:\n",
+    "                test04a_summary_txt_path = os.path.join(scenario_dir, 'TEST04-A', 'performance', 'run_1', summary_txt_name)\n",
+    "                test04b_summary_txt_path = os.path.join(scenario_dir, 'TEST04-B', 'performance', 'run_1', summary_txt_name)\n",
+    "                if os.path.exists(test04a_summary_txt_path) and os.path.exists(test04b_summary_txt_path):\n",
+    "                    # If both tests have been processed, verify that their performance matches.\n",
+    "                    verify_performance_py = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', 'TEST04-A', 'verify_test4_performance.py')\n",
+    "                    #print(\"python3 {} -u {} -s {}\".format(verify_performance_py, test04a_summary_txt_path, test04b_summary_txt_path))\n",
+    "                    verify_performance_txt = !python3 $verify_performance_py -u $test04a_summary_txt_path -s $test04b_summary_txt_path\n",
+    "                    print(verify_performance_txt)\n",
+    "                    verify_performance_txt_name = 'verify_performance.txt'\n",
+    "                    verify_performance_txt_path = os.path.join(scenario_dir, 'TEST04-A', verify_performance_txt_name)\n",
+    "                    with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
+    "                        verify_performance_txt_file.writelines('\\n'.join(verify_performance_txt))\n",
+    "                        print('%s' % os.path.join(scenario_dir, 'TEST04-A'))\n",
+    "                        print('  |_ %s' % verify_performance_txt_name)\n",
+    "                else:\n",
+    "                    # Need both A/B tests to be processed. Wait for the other one.\n",
+    "                    continue\n",
+    "                    \n",
     "            # Generate accuracy.txt.\n",
-    "            if mode=='accuracy' or mode=='submission':\n",
+    "            if mode == 'accuracy' or mode == 'submission':\n",
     "                accuracy_txt_name = 'accuracy.txt'\n",
     "                accuracy_txt_path = os.path.join(last_dir, accuracy_txt_name)\n",
-    "                if task=='image-classification':\n",
+    "                if task == 'image-classification':\n",
     "                    accuracy_imagenet_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-imagenet.py')\n",
     "                    imagenet_val_file = '$HOME/CK_TOOLS/dataset-imagenet-ilsvrc2012-aux/val.txt' # FIXME: Do not hardcode - locate via CK.\n",
     "                    accuracy_txt = !python3 $accuracy_imagenet_py --imagenet-val-file $imagenet_val_file --mlperf-accuracy-file $accuracy_json_path\n",
@@ -2074,7 +2096,7 @@
     "                    accuracy_line = accuracy_txt[-1]\n",
     "                    match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
     "                    accuracy_pc = float(match.group(1))\n",
-    "                elif task=='object-detection':\n",
+    "                elif task == 'object-detection':\n",
     "                    accuracy_coco_py = os.path.join(upstream_path, 'v0.5', 'classification_and_detection', 'tools', 'accuracy-coco.py')\n",
     "                    coco_dir = '/home/anton/CK_TOOLS/dataset-coco-2017-val' # FIXME: Do not hardcode - locate via CK.\n",
     "                    os.environ['PYTHONPATH'] = pythonpath_coco+':'+os.environ.get('PYTHONPATH','')\n",
@@ -2089,7 +2111,7 @@
     "                    accuracy_txt_file.writelines('\\n'.join(accuracy_txt))\n",
     "                    print('  |_ %s [%.3f%% parsed from \"%s\"]' % (accuracy_txt_name, accuracy_pc, accuracy_line))\n",
     "            # Generate submission_checklist.txt for each system, benchmark and scenario under \"measurements/\".\n",
-    "            if mode=='accuracy' and not audit:\n",
+    "            if mode == 'accuracy' and not audit:\n",
     "                checklist_name = 'submission_checklist.txt'\n",
     "                checklist_path = os.path.join(measurements_dir, system, benchmark, scenario, checklist_name)\n",
     "                system_json = division_systems.get(division_system, default_system_json)\n",
@@ -2105,7 +2127,7 @@
     "                # FIXME: The actual performance_sample_count can be extracted from the performance run.\n",
     "                # Again, this is not available to us here.\n",
     "                # We could check in user.conf, but we would need to parse it.\n",
-    "                performance_sample_count = 1024 if task=='image-classification' else 256\n",
+    "                performance_sample_count = 1024 if task == 'image-classification' else 256\n",
     "                # Write the checklist.\n",
     "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'], task=task,\n",
     "                                          revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc,\n",
