Submit rpi4 audit tests.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1644,6 +1644,13 @@
     "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/35\n",
     "]\n",
     "\n",
+    "repos_image_classification_closed_audit = [\n",
+    "    'mlperf.closed.image-classification.firefly.audit', # https://github.com/mlperf/submissions_inference_0_5/pull/234\n",
+    "    'mlperf.closed.image-classification.hikey960.audit', # https://github.com/mlperf/submissions_inference_0_5/pull/236\n",
+    "    'mlperf.closed.image-classification.rpi4.audit', # https://github.com/mlperf/submissions_inference_0_5/pull/238\n",
+    "    #'mlperf.closed.image-classification.mate10pro.audit',\n",
+    "]\n",
+    "\n",
     "#\n",
     "# Image Classification - Open (MobileNets-v1,v2).\n",
     "#\n",
@@ -1974,10 +1981,9 @@
     "        if not os.path.exists(mode_dir): os.mkdir(mode_dir)\n",
     "        \n",
     "        if audit:\n",
-    "            # Only deal with a subset of audit tests for now.\n",
-    "            if test not in [ 'TEST04-A', 'TEST04-B' ]: # [ 'TEST01', 'TEST03', 'TEST05' ]:\n",
-    "                continue\n",
-    "            \n",
+    "            # Deal with a subset of audit tests.\n",
+    "#             if test not in [ 'TEST03' ]: # [ 'TEST01', 'TEST03', 'TEST04-A', 'TEST04-B', 'TEST05' ]:\n",
+    "#                 continue\n",
     "            # Save the accuracy and performance dirs for the corresponding submission experiment.\n",
     "            accuracy_dir = os.path.join(scenario_dir, 'accuracy')\n",
     "            performance_dir = os.path.join(scenario_dir, 'performance', 'run_1')\n",
@@ -2073,7 +2079,7 @@
     "                    verify_performance_py = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', 'TEST04-A', 'verify_test4_performance.py')\n",
     "                    #print(\"python3 {} -u {} -s {}\".format(verify_performance_py, test04a_summary_txt_path, test04b_summary_txt_path))\n",
     "                    verify_performance_txt = !python3 $verify_performance_py -u $test04a_summary_txt_path -s $test04b_summary_txt_path\n",
-    "                    print(verify_performance_txt)\n",
+    "                    #print(verify_performance_txt)\n",
     "                    verify_performance_txt_name = 'verify_performance.txt'\n",
     "                    verify_performance_txt_path = os.path.join(scenario_dir, 'TEST04-A', verify_performance_txt_name)\n",
     "                    with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
@@ -2083,7 +2089,6 @@
     "                else:\n",
     "                    # Need both A/B tests to be processed. Wait for the other one.\n",
     "                    continue\n",
-    "                    \n",
     "            # Generate accuracy.txt.\n",
     "            if mode == 'accuracy' or mode == 'submission':\n",
     "                accuracy_txt_name = 'accuracy.txt'\n",
@@ -2151,8 +2156,7 @@
     "#repos = repos_merged\n",
     "repos = [\n",
     "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "#    'mlperf.closed.image-classification.rpi4.audit'\n",
-    "    'mlperf.closed.image-classification.firefly.audit'\n",
+    "    'mlperf.closed.image-classification.rpi4.audit'\n",
     "]\n",
     "# repos = repos_object_detection_open\n",
     "for repo_uoa in repos:\n",
