Use RDI/EOL for velociti CPU. Collaboration with PoliMi.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -55,6 +55,7 @@
     "1. [Get the experimental data](#get)\n",
     "  1. [Image Classification - Closed](#get_image_classification_closed)\n",
     "  1. [Image Classification - Open](#get_image_classification_open)\n",
+    "  1. [Object Detection - Open](#get_object_detection_open)\n",
     "1. [Generate the submission checklist](#checklist)\n",
     "1. [Check the experimental data](#check)"
    ]
@@ -488,10 +489,7 @@
     "    \"accelerator_memory_configuration\": \"GDDR5X (max bandwidth 320 GB/s)\",\n",
     "    \"accelerator_on-chip_memories\": \"20x48 KiB\",\n",
     "    \"cooling\": \"standard\",\n",
-    "    \"hw_notes\": \"http://h20195.www2.hp.com/v2/default.aspx?cc=ie&lc=en&oid=7528701; \\\n",
-    "                 https://ark.intel.com/products/81705/Intel-Xeon-Processor-E5-2650-v3-25M-Cache-2_30-GHz; \\\n",
-    "                 http://www.cpu-world.com/CPUs/Xeon/Intel-Xeon%20E5-2650%20v3.html; \\\n",
-    "                 http://www.geforce.co.uk/hardware/10series/geforce-gtx-1080/\",\n",
+    "    \"hw_notes\": \"The Intel CPU has reached its end-of-life (EOL). http://h20195.www2.hp.com/v2/default.aspx?cc=ie&lc=en&oid=7528701; https://ark.intel.com/products/81705/Intel-Xeon-Processor-E5-2650-v3-25M-Cache-2_30-GHz; http://www.cpu-world.com/CPUs/Xeon/Intel-Xeon%20E5-2650%20v3.html; http://www.geforce.co.uk/hardware/10series/geforce-gtx-1080/\",\n",
     "    \n",
     "    \"framework\": \"TensorFlow v1.14\",\n",
     "    \"operating_system\": \"Ubuntu 16.04.6 LTS; kernel 4.4.0-112-generic #135-Ubuntu SMP (Fri Jan 19 11:48:36 UTC 2018)\",\n",
@@ -616,6 +614,8 @@
     "                template = deepcopy(platform_templates[platform])\n",
     "                template.update({\n",
     "                    'division'  : division,\n",
+    "                    'submitter' : 'dividiti', # 'dividiti' if platform != 'velociti' else 'dividiti, Politecnico di Milano'\n",
+    "                    'status'    : 'available' if library_backend != 'tensorflow-v1.14-cpu' else 'RDI',\n",
     "                    'framework' : frameworks[library_backend]\n",
     "                })\n",
     "                if (not library_backend.startswith('tensorflow') and not library_backend.endswith('opencl')) \\\n",
@@ -1293,6 +1293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"get_object_detection_open\"></a>\n",
     "### Object Detection - Open"
    ]
   },
@@ -1340,9 +1341,9 @@
     "- [%(closed)s] Closed\n",
     "\n",
     "Category (check one):\n",
-    "- [x] Available\n",
-    "- [ ] Preview\n",
-    "- [ ] Research, Development, and Internal (RDI)\n",
+    "- [%(category_available)s] Available\n",
+    "- [%(category_preview)s] Preview\n",
+    "- [%(category_rdi)s] Research, Development, and Internal (RDI)\n",
     "\n",
     "Benchmark (check one):\n",
     "- [%(benchmark_mobilenet)s] MobileNet\n",
@@ -1542,7 +1543,7 @@
     "\n",
     "def get_checklist(checklist_template=checklist_template, name='Anton Lokhmotov', email='anton@dividiti.com',\n",
     "                  system='rpi4-tflite-v1.15', system_name='Raspberry Pi 4 (rpi4)', revision='61220457de',\n",
-    "                  division='closed', task='image-classification', benchmark='mobilenet', scenario='singlestream',\n",
+    "                  division='closed', category='available', task='image-classification', benchmark='mobilenet', scenario='singlestream',\n",
     "                  performance_sample_count=1024, performance_sample_count_met=True,\n",
     "                  accuracy_pc=12.345, accuracy_met=True, numerics='fp32'):\n",
     "    def tick(var): return \"x\" if var else \" \"\n",
@@ -1564,6 +1565,10 @@
     "        # Division.\n",
     "        \"closed\" : tick(division=='closed'),\n",
     "        \"open\" : tick(division=='open'),\n",
+    "        # Division.\n",
+    "        \"category_available\" : tick(category.lower()=='available'),\n",
+    "        \"category_preview\" : tick(category.lower()=='preview'),\n",
+    "        \"category_rdi\" : tick(category.lower()=='rdi'),\n",
     "        # Benchmark.\n",
     "        \"benchmark_mobilenet\": tick(benchmark=='mobilenet'),\n",
     "        \"benchmark_resnet\": tick(benchmark=='resnet'),\n",
@@ -1606,8 +1611,9 @@
     "    \n",
     "    return checklist\n",
     "\n",
-    "null = get_checklist(system='rpi4-armnn-v19.08-neon', system_name='Raspberry Pi 4 (rpi4)', benchmark='mobilenet', accuracy_pc=70.241, numerics='uint8')\n",
-    "null = get_checklist(system='hikey960-tflite-v1.15', system_name='Linaro HiKey 960 (hikey960)', benchmark='resnet', accuracy_pc=75.692, revision='deadbeef')"
+    "# null = get_checklist(system='rpi4-armnn-v19.08-neon', system_name='Raspberry Pi 4 (rpi4)', benchmark='mobilenet', accuracy_pc=70.241, numerics='uint8')\n",
+    "# null = get_checklist(system='hikey960-tflite-v1.15', system_name='Linaro HiKey 960 (hikey960)', benchmark='resnet', accuracy_pc=75.692, revision='deadbeef')\n",
+    "null = get_checklist(system='velociti-tensorflow-v1.14-cpu', name='Anton Lokhmotov; Emanuele Vitali', email='anton@dividiti.com; emanuele.vitali@polimi.it', system_name='HP Z640 G1X62EA workstation (velociti)', division='open', category='RDI', benchmark='ssd-mobilenet-fpn')"
    ]
   },
   {
@@ -1806,6 +1812,8 @@
     "        else:\n",
     "            raise \"Expected 'accuracy' or 'performance' or 'audit' in tags!\"\n",
     "\n",
+    "#         if mode == 'accuracy': continue\n",
+    "            \n",
     "        organization = submitter\n",
     "\n",
     "        if backend != '':\n",
@@ -2048,47 +2056,48 @@
     "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file, indent=2)\n",
     "                print('  |_ %s' % accuracy_json_name)\n",
     "            # Do what's required by NVIDIA's audit tests.\n",
-    "            test_path = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', test)\n",
-    "            if audit and 'TEST01' in tags:\n",
-    "                # Verify that the accuracy (partially) dumped for the audit test matches that for the submision.\n",
-    "                verify_accuracy_py = os.path.join(test_path, 'verify_accuracy.py')\n",
-    "                submission_accuracy_json_path = os.path.join(accuracy_dir, accuracy_json_name)\n",
-    "                verify_accuracy_txt = !python3 $verify_accuracy_py -a $submission_accuracy_json_path -p $accuracy_json_path\n",
-    "                verify_accuracy_txt_name = 'verify_accuracy.txt'\n",
-    "                verify_accuracy_txt_path = os.path.join(test_dir, verify_accuracy_txt_name)\n",
-    "                with open(verify_accuracy_txt_path, 'w') as verify_accuracy_txt_file:\n",
-    "                    verify_accuracy_txt_file.writelines('\\n'.join(verify_accuracy_txt))\n",
-    "                    print('%s' % test_dir)\n",
-    "                    print('  |_ %s' % verify_accuracy_txt_name)\n",
-    "            if audit and test in [ 'TEST01', 'TEST03', 'TEST05' ]:\n",
-    "                # Verify that the performance for the audit test matches that for the submission.\n",
-    "                verify_performance_py = os.path.join(test_path, 'verify_performance.py')\n",
-    "                submission_summary_txt_path = os.path.join(performance_dir, summary_txt_name)\n",
-    "                verify_performance_txt = !python3 $verify_performance_py -r $submission_summary_txt_path -t $summary_txt_path\n",
-    "                verify_performance_txt_name = 'verify_performance.txt'\n",
-    "                verify_performance_txt_path = os.path.join(test_dir, verify_performance_txt_name)\n",
-    "                with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
-    "                    verify_performance_txt_file.writelines('\\n'.join(verify_performance_txt))\n",
-    "                    print('%s' % test_dir)\n",
-    "                    print('  |_ %s' % verify_performance_txt_name)\n",
-    "            if audit and test in [ 'TEST04-A', 'TEST04-B' ]:\n",
-    "                test04a_summary_txt_path = os.path.join(scenario_dir, 'TEST04-A', 'performance', 'run_1', summary_txt_name)\n",
-    "                test04b_summary_txt_path = os.path.join(scenario_dir, 'TEST04-B', 'performance', 'run_1', summary_txt_name)\n",
-    "                if os.path.exists(test04a_summary_txt_path) and os.path.exists(test04b_summary_txt_path):\n",
-    "                    # If both tests have been processed, verify that their performance matches.\n",
-    "                    verify_performance_py = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', 'TEST04-A', 'verify_test4_performance.py')\n",
-    "                    #print(\"python3 {} -u {} -s {}\".format(verify_performance_py, test04a_summary_txt_path, test04b_summary_txt_path))\n",
-    "                    verify_performance_txt = !python3 $verify_performance_py -u $test04a_summary_txt_path -s $test04b_summary_txt_path\n",
-    "                    #print(verify_performance_txt)\n",
+    "            if audit:\n",
+    "                test_path = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', test)\n",
+    "                if 'TEST01' in tags:\n",
+    "                    # Verify that the accuracy (partially) dumped for the audit test matches that for the submision.\n",
+    "                    verify_accuracy_py = os.path.join(test_path, 'verify_accuracy.py')\n",
+    "                    submission_accuracy_json_path = os.path.join(accuracy_dir, accuracy_json_name)\n",
+    "                    verify_accuracy_txt = !python3 $verify_accuracy_py -a $submission_accuracy_json_path -p $accuracy_json_path\n",
+    "                    verify_accuracy_txt_name = 'verify_accuracy.txt'\n",
+    "                    verify_accuracy_txt_path = os.path.join(test_dir, verify_accuracy_txt_name)\n",
+    "                    with open(verify_accuracy_txt_path, 'w') as verify_accuracy_txt_file:\n",
+    "                        verify_accuracy_txt_file.writelines('\\n'.join(verify_accuracy_txt))\n",
+    "                        print('%s' % test_dir)\n",
+    "                        print('  |_ %s' % verify_accuracy_txt_name)\n",
+    "                if test in [ 'TEST01', 'TEST03', 'TEST05' ]:\n",
+    "                    # Verify that the performance for the audit test matches that for the submission.\n",
+    "                    verify_performance_py = os.path.join(test_path, 'verify_performance.py')\n",
+    "                    submission_summary_txt_path = os.path.join(performance_dir, summary_txt_name)\n",
+    "                    verify_performance_txt = !python3 $verify_performance_py -r $submission_summary_txt_path -t $summary_txt_path\n",
     "                    verify_performance_txt_name = 'verify_performance.txt'\n",
-    "                    verify_performance_txt_path = os.path.join(scenario_dir, 'TEST04-A', verify_performance_txt_name)\n",
+    "                    verify_performance_txt_path = os.path.join(test_dir, verify_performance_txt_name)\n",
     "                    with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
     "                        verify_performance_txt_file.writelines('\\n'.join(verify_performance_txt))\n",
-    "                        print('%s' % os.path.join(scenario_dir, 'TEST04-A'))\n",
+    "                        print('%s' % test_dir)\n",
     "                        print('  |_ %s' % verify_performance_txt_name)\n",
-    "                else:\n",
-    "                    # Need both A/B tests to be processed. Wait for the other one.\n",
-    "                    continue\n",
+    "                if test in [ 'TEST04-A', 'TEST04-B' ]:\n",
+    "                    test04a_summary_txt_path = os.path.join(scenario_dir, 'TEST04-A', 'performance', 'run_1', summary_txt_name)\n",
+    "                    test04b_summary_txt_path = os.path.join(scenario_dir, 'TEST04-B', 'performance', 'run_1', summary_txt_name)\n",
+    "                    if os.path.exists(test04a_summary_txt_path) and os.path.exists(test04b_summary_txt_path):\n",
+    "                        # If both tests have been processed, verify that their performance matches.\n",
+    "                        verify_performance_py = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', 'TEST04-A', 'verify_test4_performance.py')\n",
+    "                        #print(\"python3 {} -u {} -s {}\".format(verify_performance_py, test04a_summary_txt_path, test04b_summary_txt_path))\n",
+    "                        verify_performance_txt = !python3 $verify_performance_py -u $test04a_summary_txt_path -s $test04b_summary_txt_path\n",
+    "                        #print(verify_performance_txt)\n",
+    "                        verify_performance_txt_name = 'verify_performance.txt'\n",
+    "                        verify_performance_txt_path = os.path.join(scenario_dir, 'TEST04-A', verify_performance_txt_name)\n",
+    "                        with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
+    "                            verify_performance_txt_file.writelines('\\n'.join(verify_performance_txt))\n",
+    "                            print('%s' % os.path.join(scenario_dir, 'TEST04-A'))\n",
+    "                            print('  |_ %s' % verify_performance_txt_name)\n",
+    "                    else:\n",
+    "                        # Need both A/B tests to be processed. Wait for the other one.\n",
+    "                        continue\n",
     "            # Generate accuracy.txt.\n",
     "            if mode == 'accuracy' or mode == 'submission':\n",
     "                accuracy_txt_name = 'accuracy.txt'\n",
@@ -2134,10 +2143,22 @@
     "                # We could check in user.conf, but we would need to parse it.\n",
     "                performance_sample_count = 1024 if task == 'image-classification' else 256\n",
     "                # Write the checklist.\n",
-    "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'], task=task,\n",
-    "                                          revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc,\n",
-    "                                          performance_sample_count=performance_sample_count,\n",
-    "                                          numerics=implementation_benchmark_json['weight_data_types'])\n",
+    "                if division == 'open' and task == 'object-detection':\n",
+    "                    # Collaboration between dividiti and Politecnico di Milano.\n",
+    "                    print(system)\n",
+    "                    checklist = get_checklist(name='Anton Lokhmotov; Emanuele Vitali',\n",
+    "                                              email='anton@dividiti.com; emanuele.vitali@polimi.it',\n",
+    "                                              division=division, task=task, system=system,\n",
+    "                                              system_name=system_json['system_name'], category=system_json['status'],\n",
+    "                                              revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc,\n",
+    "                                              performance_sample_count=performance_sample_count,\n",
+    "                                              numerics=implementation_benchmark_json['weight_data_types'])\n",
+    "                else:\n",
+    "                    checklist = get_checklist(division=division, task=task, system=system,\n",
+    "                                              system_name=system_json['system_name'], category=system_json['status'],\n",
+    "                                              revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc,\n",
+    "                                              performance_sample_count=performance_sample_count,\n",
+    "                                              numerics=implementation_benchmark_json['weight_data_types'])\n",
     "                with open(checklist_path, 'w') as checklist_file:\n",
     "                    checklist_file.writelines(checklist)\n",
     "\n",
@@ -2153,15 +2174,16 @@
     "path = '/home/anton/projects/mlperf/'\n",
     "submitter = 'dividiti'\n",
     "\n",
-    "#repos = repos_merged\n",
-    "repos = [\n",
-    "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "    'mlperf.closed.image-classification.rpi4.audit'\n",
-    "]\n",
-    "# repos = repos_object_detection_open\n",
+    "repos = repos_object_detection_open\n",
     "for repo_uoa in repos:\n",
-    "#     check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
-    "    check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=True)\n",
+    "    check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=False)\n",
+    "\n",
+    "# repos = [\n",
+    "#     # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
+    "#     'mlperf.closed.image-classification.rpi4.audit'\n",
+    "# ]\n",
+    "# for repo_uoa in repos:\n",
+    "#     check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=True)\n",
     "    \n",
     "print(\"*\" * 100)\n",
     "submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
@@ -2381,6 +2403,13 @@
     "\n",
     "# with open('dividiti-open-results.csv', 'w') as results_file:\n",
     "#     results_file.write('\\n'.join(results))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate human-readable results (take 3)"
    ]
   }
  ],
